add comms to css

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,3 +1,6 @@
+/*==========================================================================================
+                                         General style
+ ===========================================================================================*/
 * {
     box-sizing: border-box;
 }
@@ -29,6 +32,10 @@ a {
     text-decoration: none;
     color: grey;
 }
+
+/*==========================================================================================
+                                    Wrapped menu
+ =========================================================================================*/
 
 .wrapper {
     margin: 0px auto;
@@ -79,3 +86,7 @@ header li:hover .sub_menu {
     background-color: #ffffff;
     color: #3f3d3d;
 }
+
+/*============================================================================================
+                                      Form style
+ ============================================================================================*/
