--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -7,6 +7,13 @@
 h1 {
     font-size: 25px;
     font-weight: bold;
+    text-align: center;
+}
+
+h2 {
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
 }
 
 body {
@@ -127,14 +134,18 @@ textarea {
  #send_button {
      width: 100px;
      height: 60px;
-     background-color: rgba(255, 0, 0, 0.72);
-     border: 1px solid rgba(255,0,0,0.35);
+     background-color: rgba(157, 12, 12, 0.72);
+     border: 1px solid rgba(157, 12, 12,0.35);
      border-radius: 5px;
-     color: #3f3d3d;
+     color: #655f5f;
      box-shadow: 5px 0px 50px 14px rgba(255,0,0,0.35);
+     font-weight: bold;
+     text-transform: uppercase;
+     font-size: 25px;
  }
 
  #send_button:hover {
      cursor: pointer;
      transform: scale(125%);
+     color: white;
  }
